--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,7 +1,21 @@
 {
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.12.1",
+    "react-hook-form": "^7.56.4",
+    "react-router-dom": "^6.30.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.8"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.0",
+    "sass-embedded": "^1.89.0",
+    "vite": "^6.3.5"
   }
 }
