update(data): clarification titres et structure

--- a/portfolio/src/data-projects.json
+++ b/portfolio/src/data-projects.json
@@ -1,41 +1,47 @@
 [
     {
-        "id": 1,
-        "image": "/images/L-1.png",
-        "projet": ["/images/L-1.png", "/images/L-2.png", "/images/L-3.png", "/images/L-4.png"],
-        "date": "Décembre 2024",
-        "name" : "Back-end d'un site de notation de livres",
-        "github" : "https://github.com/laure-ld/P7-Dev-Web-livres.git",
-        "objectif": "Mettre en place le Back-end pour un site de notation de livres pour une librairie.",
-        "technologie": [" React", " Express", " MongoDB", " Mongoose"],
-        "competences": ["Adaptabilité face aux erreurs et aux contraintes du projet",  "Résolution de problèmes"],
-        "description": " Le projet consiste à développer un serveur Express connecté à une base de données MongoDB avec Mongoose. Il inclut la modélisation des données et l’implémentation des opérations CRUD pour gérer les livres et leurs notations, en assurant la sécurité des données. Un système d’authentification sécurisé sera mis en place, ainsi que la gestion du téléchargement et de l’optimisation des images. Les utilisateurs pourront noter les livres et une moyenne sera calculée automatiquement. L’application suivra une architecture MVC et respectera les bonnes pratiques du Green Code pour minimiser son empreinte écologique.",
-        "retour_experience": "J’ai travaillé exclusivement sur le back-end et rencontré des difficultés avec le code du front-end, notamment la cohérence des noms et les contraintes ESLint. J’ai bien assimilé le système CRUD et les schémas Mongoose. À l’avenir, j’améliorerais la sécurité avec Yup et implémenterais une authentification OAuth."
+      "id": 1,
+      "image": "/images/L-1.png",
+      "projet": ["/images/L-1.png", "/images/L-2.png", "/images/L-3.png", "/images/L-4.png"],
+      "date": "Décembre 2024",
+      "titre": "Back-end Express sécurisé pour une librairie en ligne",
+      "github": "https://github.com/laure-ld/P7-Dev-Web-livres.git",
+      "objectif": "Mettre en place le Back-end d’un site de notation de livres pour une librairie.",
+      "technologie": ["React", "Express", "MongoDB", "Mongoose"],
+      "stack_affichage": "Express – MongoDB – Auth – MVC",
+      "impact_utilisateur": "Les utilisateurs peuvent noter des livres et consulter une moyenne calculée automatiquement.",
+      "competences": ["Adaptabilité face aux erreurs et aux contraintes du projet", "Résolution de problèmes"],
+      "description": "Développement du back-end d’un site de notation pour librairie, via une API Express connectée à MongoDB. Le projet inclut la gestion CRUD des livres et utilisateurs, la sécurité via authentification, ainsi que l’optimisation des images. L’architecture MVC et le respect des bonnes pratiques écologiques (Green Code) ont été appliqués.",
+      "retour_experience": "Ce projet m’a permis de bien consolider ma maîtrise du CRUD avec Mongoose et l’architecture Express. J’ai dû surmonter des difficultés liées à l'intégration front-end (incohérences de nom, ESLint). Aujourd’hui, je sécuriserais encore plus avec une validation de schémas type Yup, et implémenterais une auth OAuth."
     },
     {
-        "id": 2,
-        "image": "/images/K-1.png",
-        "projet": ["/images/K-1.png", "/images/K-2.png", "/images/K-3.png", "/images/K-4.png"],
-        "date": "Novembre 2024",
-        "name" : "Application web de location immobilière avec React",
-        "github" : "https://github.com/laure-ld/kasa.git",
-        "objectif": "Implémenter le front-end d’une application en utilisant React et React Router.",
-        "technologie": ["React", "React Router", "Node.js"],
-        "competences": ["Gestion des composants et des états dans une application React", "Organisation et structuration du code"],
-        "description": "Ce projet consiste à implémenter le front-end d’une application avec React et React Router pour offrir une navigation fluide et une expérience utilisateur moderne. L’objectif est de structurer l’affichage des données et de créer des composants interactifs en suivant les maquettes fournies. Le développement se fera exclusivement en front-end, en utilisant des données simulées depuis un fichier JSON. L’application sera initialisée avec Vite pour une configuration optimisée, et Node.js sera utilisé pour exécuter du code en dehors du navigateur.",
-        "retour_experience": "J’ai travaillé sur le front-end avec React et compris rapidement son fonctionnement ainsi que ses principales bibliothèques. L’implémentation de Vite et React Router s’est faite sans difficulté. Pour améliorer ce projet, j’ajouterais plus de dynamisme, par exemple avec des animations CSS ou des transitions via Framer Motion."
+      "id": 2,
+      "image": "/images/K-1.png",
+      "projet": ["/images/K-1.png", "/images/K-2.png", "/images/K-3.png", "/images/K-4.png"],
+      "date": "Novembre 2024",
+      "titre": "Application immobilière responsive avec React",
+      "github": "https://github.com/laure-ld/kasa.git",
+      "objectif": "Implémenter le front-end d’une application avec React et React Router.",
+      "technologie": ["React", "React Router", "Node.js"],
+      "stack_affichage": "React – Vite – Routing",
+      "impact_utilisateur": "L’utilisateur navigue intuitivement entre les logements via une interface responsive.",
+      "competences": ["Gestion des composants et des états dans une application React", "Organisation et structuration du code"],
+      "description": "Front-end d’une application de location immobilière développée avec React et React Router. Objectif : offrir une navigation fluide et un affichage structuré des biens, en suivant une maquette précise. L’application a été configurée avec Vite pour des performances accrues et repose sur des données simulées.",
+      "retour_experience": "Ce projet a renforcé mes compétences en structuration de composants, gestion des routes, et configuration d’environnement React. Pour aller plus loin, j’ajouterais une logique de filtre dynamique et des animations CSS pour améliorer l’interactivité."
     },
     {
-        "id": 3,
-        "image": "/images/SB-1.png",
-        "projet": ["/images/SB-1.png", "/images/SB-2.png", "/images/SB-3.png", "/images/SB-4.png"],
-        "date": "Octobre 2024",
-        "name" : "Page web dynamique avec JavaScript",
-        "github" : "https://github.com/laure-ld/Sophie-bluel.git",
-        "objectif": "Créer une page web dynamique en utilisant JavaScript et en communiquant avec une API.",
-        "technologie": ["JavaScript", "DOM", "API RESTful"],
-        "competences": ["Compréhension et manipulation du DOM", "Interaction avec une API et gestion des requêtes HTTP"],
-        "description": "J’ai développé la page web dynamique d’une architecte d’intérieur en JavaScript, en intégrant une API pour afficher ses travaux. J’ai manipulé le DOM pour gérer les interactions et créé une page de connexion avec une modale d’upload de médias, le tout codé from scratch. C’était aussi l’occasion d’interagir avec un back-end pour tester les fonctionnalités et comprendre la communication avec une API.",
-        "retour_experience": "J’ai pris en main JavaScript et son fonctionnement à travers ce projet. La manipulation du DOM s’est faite sans difficulté, mais la gestion des API m’a demandé un peu plus de temps. Cependant, avec l’expérience acquise sur d’autres projets, j’ai pu mieux maîtriser cet aspect. Pour améliorer ce projet, j’optimiserais les performances des images en les convertissant en WebP et je travaillerais sur un SEO efficace pour améliorer la visibilité sur Google et autres moteurs de recherche."
+      "id": 3,
+      "image": "/images/SB-1.png",
+      "projet": ["/images/SB-1.png", "/images/SB-2.png", "/images/SB-3.png", "/images/SB-4.png"],
+      "date": "Octobre 2024",
+      "titre": "Site vitrine interactif avec JS Vanilla et API",
+      "github": "https://github.com/laure-ld/Sophie-bluel.git",
+      "objectif": "Créer une page web dynamique en JavaScript en interagissant avec une API.",
+      "technologie": ["JavaScript", "DOM", "API RESTful"],
+      "stack_affichage": "JS Vanilla – API – DOM",
+      "impact_utilisateur": "Les utilisateurs peuvent consulter les projets d’une architecte d’intérieur et uploader de nouveaux médias.",
+      "competences": ["Compréhension et manipulation du DOM", "Interaction avec une API et gestion des requêtes HTTP"],
+      "description": "J’ai développé la page web dynamique d’une architecte d’intérieur en JavaScript, en intégrant une API pour afficher ses travaux. J’ai manipulé le DOM pour gérer les interactions et créé une page de connexion avec une modale d’upload de médias, le tout codé from scratch.",
+      "retour_experience": "Ce projet m’a appris à gérer le JavaScript pur sans framework. La manipulation du DOM s’est faite naturellement, mais la gestion d’API m’a demandé plus de rigueur. Aujourd’hui, je miserais sur l’optimisation des médias (format WebP) et un meilleur SEO."
     }
-]
+]  
